--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -16,13 +16,15 @@ concurrency:
 
 jobs:
   # ─────────────────────────────────────────────
-  # 1. Lint + Type Check
+  # 1. Lint — only changed Python files
   # ─────────────────────────────────────────────
   lint:
     name: "Lint & Style"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -31,14 +33,26 @@ jobs:
           cache: "pip"
 
       - name: Install lint dependencies
+        run: pip install ruff isort
+
+      - name: Get changed Python files
+        id: changed
         run: |
-          pip install ruff isort
+          FILES=$(git diff --name-only --diff-filter=ACMR origin/${{ github.base_ref }}...HEAD -- '*.py' | tr '\n' ' ')
+          echo "files=$FILES" >> "$GITHUB_OUTPUT"
+          if [ -z "$FILES" ]; then
+            echo "No Python files changed — skipping lint."
+          else
+            echo "Linting: $FILES"
+          fi
 
-      - name: Ruff lint
-        run: ruff check src/ tests/ --output-format=github
+      - name: Ruff lint (changed files only)
+        if: steps.changed.outputs.files != ''
+        run: ruff check ${{ steps.changed.outputs.files }} --output-format=github
 
-      - name: Import order check
-        run: isort --check-only --diff src/ tests/
+      - name: Import order check (changed files only)
+        if: steps.changed.outputs.files != ''
+        run: isort --check-only --diff ${{ steps.changed.outputs.files }}
 
   # ─────────────────────────────────────────────
   # 2. Unit Tests
@@ -57,8 +71,13 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt -r requirements-dev.txt 2>/dev/null || pip install -r requirements.txt
-          pip install pytest pytest-asyncio pytest-cov
+          pip install --upgrade pip
+          for req in requirements.txt requirements-dev.txt requirements-llm.txt requirements-system.txt; do
+            if [ -f "$req" ]; then
+              pip install -r "$req" 2>/dev/null || echo "⚠️ Some deps in $req failed — continuing"
+            fi
+          done
+          pip install pytest pytest-asyncio pytest-cov pytest-timeout
 
       - name: Run tests
         run: |
@@ -69,48 +88,109 @@ jobs:
             --ignore=tests/e2e/ \
             -k "not test_cleanup_expired" \
             --timeout=60 \
-            2>&1
+            -x
 
   # ─────────────────────────────────────────────
-  # 3. Security — secrets & SQL injection scan
+  # 3. Security — multi-layer scanning
   # ─────────────────────────────────────────────
   security:
-    name: "Security Quick Scan"
+    name: "Security Scan"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+          cache: "pip"
+
+      - name: Install security tools
+        run: pip install bandit safety
+
+      # ── Bandit: Python-specific SAST ──
+      - name: Bandit SAST scan
+        run: |
+          echo "🔍 Running Bandit (Python SAST)..."
+          bandit -r src/ \
+            -f json \
+            -o bandit-report.json \
+            --severity-level medium \
+            --confidence-level medium \
+            -x "src/bantz/test*,src/bantz/**/test_*" \
+            || true
+          python3 -c "
+          import json, sys
+          try:
+              data = json.load(open('bandit-report.json'))
+              results = data.get('results', [])
+              if results:
+                  print(f'⚠️  Bandit found {len(results)} issue(s):')
+                  for r in results:
+                      sev, conf = r['issue_severity'], r['issue_confidence']
+                      print(f'  [{sev}/{conf}] {r[\"filename\"]}:{r[\"line_number\"]} — {r[\"issue_text\"]}')
+                      if sev == 'HIGH' and conf == 'HIGH':
+                          print(f'::error file={r[\"filename\"]},line={r[\"line_number\"]}::{r[\"issue_text\"]}')
+                  critical = [r for r in results if r['issue_severity'] == 'HIGH' and r['issue_confidence'] == 'HIGH']
+                  if critical:
+                      print(f'🚨 {len(critical)} critical issue(s) — blocking merge!')
+                      sys.exit(1)
+              else:
+                  print('✅ Bandit: No security issues found')
+          except FileNotFoundError:
+              print('⚠️  Bandit report not found')
+          "
+
+      # ── Safety: known vulnerability check ──
+      - name: Safety dependency check
+        continue-on-error: true
+        run: |
+          echo "🔍 Checking dependencies for known vulnerabilities..."
+          safety check -r requirements.txt --output text 2>/dev/null || echo "⚠️ Safety check completed with warnings"
+
+      # ── Custom pattern checks ──
       - name: Check for hardcoded secrets
         run: |
           echo "🔍 Scanning for potential hardcoded secrets..."
-          # API keys, tokens, passwords in Python files
-          if grep -rn --include="*.py" -E '(api_key|secret|token|password)\s*=\s*["\x27][A-Za-z0-9+/=]{16,}["\x27]' src/ tests/ 2>/dev/null | grep -v "test_\|mock\|fake\|example\|placeholder\|REDACTED"; then
-            echo "::error::Potential hardcoded secrets found!"
+          if grep -rn --include="*.py" -E '(api_key|secret_key|auth_token|password)\s*=\s*["\x27][A-Za-z0-9+/=_-]{20,}["\x27]' src/ 2>/dev/null \
+            | grep -v "test_\|mock\|fake\|example\|placeholder\|REDACTED\|TODO\|config\.get\|environ\|getenv"; then
+            echo "::error::Potential hardcoded secrets found in source code!"
             exit 1
           fi
           echo "✅ No hardcoded secrets detected"
 
       - name: Check for dangerous patterns
         run: |
-          echo "🔍 Scanning for dangerous patterns..."
+          echo "🔍 Scanning for dangerous code patterns..."
           ISSUES=0
-          # eval/exec without justification
+
           if grep -rn --include="*.py" -E '^\s*(eval|exec)\(' src/ 2>/dev/null; then
             echo "::warning::Found eval()/exec() usage — ensure it's justified"
             ISSUES=$((ISSUES+1))
           fi
-          # os.system usage
+
           if grep -rn --include="*.py" 'os\.system(' src/ 2>/dev/null; then
             echo "::warning::Found os.system() — prefer subprocess.run()"
             ISSUES=$((ISSUES+1))
           fi
-          # SQL string formatting (potential injection)
-          if grep -rn --include="*.py" -E 'f".*SELECT|f".*INSERT|f".*UPDATE|f".*DELETE|\.format\(.*SELECT' src/ 2>/dev/null | grep -v '# nosec\|# safe'; then
+
+          if grep -rn --include="*.py" -E "f['\"].*?(SELECT|INSERT|UPDATE|DELETE)" src/ 2>/dev/null | grep -v '# nosec\|# safe\|test_'; then
             echo "::warning::Potential SQL injection — use parameterized queries"
             ISSUES=$((ISSUES+1))
           fi
+
+          if grep -rn --include="*.py" -E 'pickle\.loads?\(' src/ 2>/dev/null | grep -v '# nosec'; then
+            echo "::warning::Found pickle usage — potential RCE risk"
+            ISSUES=$((ISSUES+1))
+          fi
+
+          if grep -rn --include="*.py" -E 'subprocess\.(run|call|Popen)\(.*shell\s*=\s*True' src/ 2>/dev/null | grep -v '# nosec'; then
+            echo "::warning::Found subprocess with shell=True — potential command injection"
+            ISSUES=$((ISSUES+1))
+          fi
+
           if [ $ISSUES -gt 0 ]; then
-            echo "⚠️ Found $ISSUES potential security issue(s) — review manually"
+            echo "⚠️ Found $ISSUES potential security pattern(s) — review manually"
           else
             echo "✅ No dangerous patterns detected"
           fi
