feat(resilience): Graceful Degradation — Health Monitor + Fallback Registry + CB enhancements (#1298)
- Add HealthMonitor with pluggable service checks (sqlite, ollama, google)
  - Periodic async monitoring with configurable intervals
  - EventBus integration: publishes system.health_degraded events
  - CircuitBreaker integration: auto-records failures for unhealthy services
  - Formatted CLI report with emoji indicators

- Add FallbackRegistry with per-service fallback strategies
  - Strategies: cache_fallback, sqlite_fallback, model_downgrade, graceful_error
  - Pre-configured defaults for ollama, google, neo4j, weather, spotify
  - Custom fallback function support
  - Execution history tracking

- Enhance CircuitBreaker with async call() wrapper
  - Supports both sync and async callables + fallbacks
  - CircuitOpenError exception for unhandled open circuits
  - to_dict() serialization for health reporting

- Add 6 new EventTypes: HEALTH_CHECK, HEALTH_DEGRADED, HEALTH_RECOVERED,
  CIRCUIT_OPENED, CIRCUIT_CLOSED, FALLBACK_EXECUTED

- Register 4 new tools: system.health, system.health_service,
  system.circuit_breaker, system.fallback

- 65 tests covering all components + integration scenarios

--- a/config/permissions.yaml
+++ b/config/permissions.yaml
@@ -379,6 +379,27 @@ permissions:
     risk: "low"
     decision: "allow"
 
+  # ── Health & Degradation (Issue #1298) ─────────────────────
+  - tool: "system.health"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "system.health_service"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "system.circuit_breaker"
+    action: "read"
+    risk: "low"
+    decision: "allow"
+
+  - tool: "system.fallback"
+    action: "execute"
+    risk: "low"
+    decision: "allow"
+
   # ── Catch-all (unknown tools) ──────────────────────────────
   - tool: "*"
     action: "*"
